[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/entities/emeny.png" type="Texture" id=1]
[ext_resource path="res://scenes/entities/enemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 170.774, 509.154 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 168.0
height = 682.116

[sub_resource type="Animation" id=3]
resource_name = "Attack"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("FlipHelper:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 20.0, 0.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_attack"
} ]
}

[node name="enemy" type="KinematicBody2D" groups=[
"Enemy",
]]
scale = Vector2( 0.3, 0.3 )
script = ExtResource( 2 )

[node name="FlipHelper" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="FlipHelper"]
texture = ExtResource( 1 )

[node name="AttackArea" type="Area2D" parent="FlipHelper"]
position = Vector2( 336, 16 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="FlipHelper/AttackArea"]
position = Vector2( 4.24255, 1.41425 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="DetectWallRight" type="RayCast2D" parent="."]
position = Vector2( 20, 0 )
enabled = true
cast_to = Vector2( 250, 0 )

[node name="DetectWallLeft" type="RayCast2D" parent="."]
position = Vector2( -20, 0 )
enabled = true
cast_to = Vector2( -250, 0 )

[node name="DetectFloorRight" type="RayCast2D" parent="."]
position = Vector2( 100, 300 )
enabled = true
cast_to = Vector2( 0, 300 )

[node name="DetectFloorLeft" type="RayCast2D" parent="."]
position = Vector2( -100, 300 )
enabled = true
cast_to = Vector2( 0, 300 )

[node name="platform_detect" type="RayCast2D" parent="."]
position = Vector2( 0, 500 )
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 8

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 3 )

[connection signal="body_entered" from="FlipHelper/AttackArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="body_exited" from="FlipHelper/AttackArea" to="." method="_on_AttackArea_body_exited"]
